# ehGPL-star

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: README.zh-CN.md
include/: serializer.hpp  shm.hpp  uclib.h  utils.hpp
src/: dll.cxx
